:art: add cast to movie info
